--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
-  "name": "@arkecosystem/name",
-  "description": "Provides ... for Ark Core",
+  "name": "@nosplatform/stake-transactions-crypto",
+  "description": "Provides stake trsanctions crypto logic for Ark Core",
   "version": "0.0.1",
   "contributors": [
-    "Your Name <your@domain.io>"
+    "Dean van Dugteren <dean@nos.io>"
   ],
   "license": "MIT",
   "main": "dist/index.js",
@@ -28,7 +28,8 @@
     "updates": "../../node_modules/npm-check-updates/bin/npm-check-updates -a"
   },
   "dependencies": {
-    "@arkecosystem/core-interfaces": "^2.5.7"
+    "@arkecosystem/core-interfaces": "^2.6.0-next.6",
+    "@arkecosystem/crypto": "^2.6.0-next.6"
   },
   "devDependencies": {
     "@sindresorhus/tsconfig": "^0.5.0",
