--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "private": true,
   "name": "@nosplatform/stake-transactions-crypto",
   "description": "Provides stake trsanctions crypto logic for Ark Core",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.1",
   "contributors": [
     "Dean van Dugteren <dean@nos.io>"
   ],
@@ -20,7 +19,7 @@
     "clean": "del dist",
     "docs": "../../node_modules/typedoc/bin/typedoc src --out docs",
     "lint": "../../node_modules/tslint/bin/tslint -c ./tslint.json 'src/**/*.ts' '__tests__/**/*.ts' --fix",
-    "test": "cross-env CORE_ENV=test jest --runInBand --forceExit",
+    "test": "cross-env CORE_ENV=test jest --runInBand --forceExit --passWithNoTests",
     "test:coverage": "cross-env CORE_ENV=test jest --coverage --coveragePathIgnorePatterns='/(defaults.ts|index.ts)$' --runInBand --forceExit",
     "test:debug": "cross-env CORE_ENV=test node --inspect-brk ../../node_modules/.bin/jest --runInBand",
     "test:watch": "cross-env CORE_ENV=test jest --runInBand --watch",
@@ -47,7 +46,7 @@
     "cross-env": "^6.0.0",
     "del-cli": "^3.0.0"
   },
-  "jest": {
-    "preset": "../../jest-preset.json"
+  "publishConfig": {
+    "access": "public"
   }
 }
